v25/api/keyfactor/v1/docs/CSSCMSDataModelModelsSecurityPermissionSet.md
# CSSCMSDataModelModelsSecurityPermissionSet

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **string** |  | [optional] 
**Name** | Pointer to **NullableString** |  | [optional] 
**Permissions** | Pointer to **[]string** |  | [optional] 
**SecurityRoles** | Pointer to [**[]CSSCMSDataModelModelsSecurityPermissionSetSecurityRoleInfo**](CSSCMSDataModelModelsSecurityPermissionSetSecurityRoleInfo.md) |  | [optional] 

## Methods

### NewCSSCMSDataModelModelsSecurityPermissionSet

`func NewCSSCMSDataModelModelsSecurityPermissionSet() *CSSCMSDataModelModelsSecurityPermissionSet`

NewCSSCMSDataModelModelsSecurityPermissionSet instantiates a new CSSCMSDataModelModelsSecurityPermissionSet object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewCSSCMSDataModelModelsSecurityPermissionSetWithDefaults

`func NewCSSCMSDataModelModelsSecurityPermissionSetWithDefaults() *CSSCMSDataModelModelsSecurityPermissionSet`

NewCSSCMSDataModelModelsSecurityPermissionSetWithDefaults instantiates a new CSSCMSDataModelModelsSecurityPermissionSet object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetId() string`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetIdOk() (*string, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetId(v string)`

SetId sets Id field to given value.

### HasId

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *CSSCMSDataModelModelsSecurityPermissionSet) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil
### GetPermissions

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetPermissions() []string`

GetPermissions returns the Permissions field if non-nil, zero value otherwise.

### GetPermissionsOk

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetPermissionsOk() (*[]string, bool)`

GetPermissionsOk returns a tuple with the Permissions field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPermissions

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetPermissions(v []string)`

SetPermissions sets Permissions field to given value.

### HasPermissions

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) HasPermissions() bool`

HasPermissions returns a boolean if a field has been set.

### SetPermissionsNil

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetPermissionsNil(b bool)`

 SetPermissionsNil sets the value for Permissions to be an explicit nil

### UnsetPermissions
`func (o *CSSCMSDataModelModelsSecurityPermissionSet) UnsetPermissions()`

UnsetPermissions ensures that no value is present for Permissions, not even an explicit nil
### GetSecurityRoles

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetSecurityRoles() []CSSCMSDataModelModelsSecurityPermissionSetSecurityRoleInfo`

GetSecurityRoles returns the SecurityRoles field if non-nil, zero value otherwise.

### GetSecurityRolesOk

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) GetSecurityRolesOk() (*[]CSSCMSDataModelModelsSecurityPermissionSetSecurityRoleInfo, bool)`

GetSecurityRolesOk returns a tuple with the SecurityRoles field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSecurityRoles

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetSecurityRoles(v []CSSCMSDataModelModelsSecurityPermissionSetSecurityRoleInfo)`

SetSecurityRoles sets SecurityRoles field to given value.

### HasSecurityRoles

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) HasSecurityRoles() bool`

HasSecurityRoles returns a boolean if a field has been set.

### SetSecurityRolesNil

`func (o *CSSCMSDataModelModelsSecurityPermissionSet) SetSecurityRolesNil(b bool)`

 SetSecurityRolesNil sets the value for SecurityRoles to be an explicit nil

### UnsetSecurityRoles
`func (o *CSSCMSDataModelModelsSecurityPermissionSet) UnsetSecurityRoles()`

UnsetSecurityRoles ensures that no value is present for SecurityRoles, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


